# daily-briefing

./: .gitignore  README.md  daily-briefing.sh  package.json  pyproject.toml
daily_briefing/: __init__.py  __main__.py  briefing.py  cli.py
daily_briefing/formatters/: json_fmt.py  plain.py  terminal.py
daily_briefing/sections/: calendar.py  gitstatus.py  kubernetes.py  reminders.py  system.py  weather.py
src/: args.js  briefing.js  index.js
src/formatters/: json.js  plain.js  terminal.js
src/sections/: calendar.js  gitstatus.js  kubernetes.js  system.js  weather.js
